--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "flash-messages": "0.0.4",
         "morgan": "^1.9.0",
         "mysql2": "^1.5.1",
+        "nodemon": "^1.12.1",
         "sequelize": "^4.23.2",
         "serve-favicon": "^2.4.5"
     }
